@@ -1,11 +1,10 @@
 package main_2.j_3_r;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class Main {
 	public static void main(String[] args) {
-		List<String> names = Arrays.asList("湊雄輔", "朝香あゆみ", "菅原拓真", "大江岳人");
+		List<String> names = List.of("湊雄輔", "朝香あゆみ", "菅原拓真", "大江岳人");
 //		上記Arrays.asListはJava9以前の記述、本来はList.ofで同じ効果
 		names.stream()
 		.filter(n -> n.length() <= 4)
